test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/libraries/external_var_scoping.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[34]:
  int
  identifier(read_x)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(4)
  ;
  if
  (
  identifier(x)
  ==
  const int(4)
  )
  {
  extern
  int
  identifier(x)
  ;
  return
  identifier(x)
  ;
  }
  else
  {
  return
  -
  const int(1)
  ;
  }
  }
