test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/use_file_scope_variable_as_fun.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  extern
  int
  identifier(foo)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  )
  ;
  }
